fixed room card description being covered by hover mask

--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,7 @@ nav ul svg:hover {
     max-height: 50%;
     white-space: normal;
     overflow-wrap: break-word;
+    z-index: 2;
 }
 
 .room-card:hover {
@@ -256,7 +257,7 @@ nav ul svg:hover {
 }
 
 .room-link:hover::after {
-    background-color: rgba(0, 0, 0, 0.4); /* Dark overlay on hover */
+    background-color: rgba(0, 0, 0, 0.3); /* Dark overlay on hover */
 }
 
 h1 {
